--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.AddPinActivity">
+        <activity android:name=".ui.AddPinActivity"
+            android:parentActivityName=".ui.MainActivity">
         </activity>
     </application>
 
