--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+
 
 android {
     compileSdkVersion 25
@@ -21,16 +23,26 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'commons-io:commons-io:2.5'
+
+    compile 'com.parse:parse-android:1.13.1'
+
+    // Picasso - for image loading
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
+    // Firebase
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-storage:10.0.1'
+
+    testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:design:25.1.0'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:cardview-v7:25.1.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.parse:parse-android:1.13.1'
-    compile 'commons-io:commons-io:2.5'
+
 
 
 }
